--- a/angular/src/javascript/src/app/components/navbar/navbar.html
+++ b/angular/src/javascript/src/app/components/navbar/navbar.html
@@ -8,9 +8,13 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
-        <li class="active"><a ng-href="#">Home</a></li>
-        <li><a ng-href="#">About</a></li>
-        <li><a ng-href="#">Contact</a></li>
+        <li class="active"><a ui-sref="home">Home</a></li>
+        <li><a ui-sref="editable">Editable</a></li>
+        <li><a ui-sref="mvc">MVC</a></li>
+        <li><a ui-sref="binding">Binding</a></li>
+        <li><a ui-sref="watch">Watch</a></li>
+        <li><a ui-sref="di">DI</a></li>
+        <li><a ui-sref="http">HTTP</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
