--- a/angular/src/javascript/src/app/watch/watch.html
+++ b/angular/src/javascript/src/app/watch/watch.html
@@ -3,9 +3,7 @@
   <div ng-include="'app/components/navbar/navbar.html'"></div>
 
   <p>
-    <h3>{{name}}</h3>
-    <input ng-model="name" ><br>
-    <input ng-model="name" ><br>
-
+    <input ng-model="phone"><br>
+    <i>{{phone}}</i>
   </p>
 </div>
